--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -51,7 +51,7 @@
                                       onclick="openAndFillDialogNew()"
                                       update="@form"
                      />
-<!-- onclick="callRemoteMethod();PF('includedDialog').show();"-->
+                        <!-- onclick="callRemoteMethod();PF('includedDialog').show();"-->
                     </h:form>
                 </span>
                 <input type="hidden" name="logoutExitPage" value="/welcome.xhtml"/>
@@ -67,7 +67,7 @@
 
     <h:form id="mainForm">
         <p:remoteCommand name="callRemoteMethod"
-                         actionListener="#{pregledKorisnikaController.getUserInfo(request.remoteUser)}" />
+                         actionListener="#{pregledKorisnikaController.getUserInfo(request.remoteUser)}"/>
         <h:panelGrid>
             <p:messages id="messages" showDetail="true" closable="true">
 
@@ -79,70 +79,72 @@
                      toggleableHeader="true" widgetVar="widgetInputPretraga">
             <h:panelGrid columns="2" id="allPanelGrid">
 
-                <p:panel id="panel_unos" header="Unos / ažuriranje korisnika" style="margin-top:5px; color: #dfefff"
+                <!--                <p:panel id="panel_unos" header="Unos / ažuriranje korisnika" style="margin-top:5px; color: #dfefff"-->
+                <!--                         toggleable="false"-->
+                <!--                         toggleSpeed="500"-->
+                <!--                         toggleableHeader="false" widgetVar="widgetInput">-->
+                <!--                    <h:panelGrid id="panelGridInputForm" columns="2">-->
+                <!--                        <p:outputLabel for="korisnickoImeInput" value="Korisničko ime:   "/>-->
+                <!--                        <p:inputText id="korisnickoImeInput"-->
+                <!--                                     value="#{pregledKorisnikaController.korisnikDto.korisnickoIme}"-->
+                <!--                                     maxlength="20"-->
+                <!--                                     required="false    "/>-->
+                <!--                        &lt;!&ndash;                             requiredMessage="Korisničko ime je obavezan podatak!"&ndash;&gt;-->
+
+                <!--                        <p:outputLabel for="imeInput" value="Ime   :   "/>-->
+                <!--                        <p:inputText id="imeInput"-->
+                <!--                                     value="#{pregledKorisnikaController.korisnikDto.ime}"-->
+                <!--                                     maxlength="50" size="50"-->
+                <!--                                     required="false"/>-->
+                <!--                        &lt;!&ndash;                             requiredMessage="Ime korisnika je obavezan podatak!"&ndash;&gt;-->
+
+                <!--                        <p:outputLabel for="prezimeInput" value="Prezime   :   "/>-->
+                <!--                        <p:inputText id="prezimeInput"-->
+                <!--                                     value="#{pregledKorisnikaController.korisnikDto.prezime}"-->
+                <!--                                     maxlength="50" size="50"-->
+                <!--                                     required="false"-->
+                <!--                                     requiredMessage="Prezime korisnika je obavezan podatak!"/>-->
+
+                <!--                        <p:outputLabel for="oibInput" value="OIB   :   "/>-->
+                <!--                        <p:inputMask id="oibInput"-->
+                <!--                                     value="#{pregledKorisnikaController.korisnikDto.oib}"-->
+                <!--                                     maxlength="11"-->
+                <!--                                     required="false"-->
+                <!--                                     requiredMessage="OIB korisnika je obavezan podatak!"-->
+                <!--                                     mask="99999999999" validateMask="true"/>-->
+
+                <!--                        <p:outputLabel for="emailInput" value="Email   :   "/>-->
+                <!--                        <p:inputText id="emailInput"-->
+                <!--                                     value="#{pregledKorisnikaController.korisnikDto.email}"-->
+                <!--                                     maxlength="50" size="50"-->
+                <!--                                     required="false"-->
+                <!--                                     requiredMessage="Email korisnika je obavezan podatak!"/>-->
+
+                <!--                        <p:outputLabel for="tipKorsnikaInput" value="Uloga:   "/>-->
+                <!--                        <p:selectOneMenu id="tipKorsnikaInput"-->
+                <!--                                         value="#{pregledKorisnikaController.korisnikDto.tipKorisnika}"-->
+                <!--                                         style="width:250px" required="false"-->
+                <!--                                         requiredMessage="Uloga korisnika je obavezan podatak!">-->
+                <!--                            <f:selectItems value="#{pregledKorisnikaController.tipKorisnikaSelectItems}"/>-->
+                <!--                        </p:selectOneMenu>-->
+
+
+                <!--                        <p:commandButton value="Novi" actionListener="#{pregledKorisnikaController.resetDto}"-->
+                <!--                                         id="novizapis"-->
+                <!--                                         style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"-->
+                <!--                                         update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>-->
+                <!--                        <p:commandButton value="Spremi" actionListener="#{pregledKorisnikaController.save}" id="spremi"-->
+                <!--                                         style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"-->
+                <!--                                         update="panel_unos, filterAdvanced, messages" icon="pi pi-save"/>-->
+
+                <!--                    </h:panelGrid>-->
+                <!--                </p:panel>-->
+
+                <p:panel id="panel_filter1" header="Pretraga korisnika aplikacije"
+                         style="margin-top:5px; color: #dfefff"
                          toggleable="false"
-                         toggleSpeed="500"
-                         toggleableHeader="false" widgetVar="widgetInput">
-                    <h:panelGrid id="panelGridInputForm" columns="2">
-                        <p:outputLabel for="korisnickoImeInput" value="Korisničko ime:   "/>
-                        <p:inputText id="korisnickoImeInput"
-                                     value="#{pregledKorisnikaController.korisnikDto.korisnickoIme}"
-                                     maxlength="20"
-                                     required="false    "/>
-                        <!--                             requiredMessage="Korisničko ime je obavezan podatak!"-->
-
-                        <p:outputLabel for="imeInput" value="Ime   :   "/>
-                        <p:inputText id="imeInput"
-                                     value="#{pregledKorisnikaController.korisnikDto.ime}"
-                                     maxlength="50" size="50"
-                                     required="false"/>
-                        <!--                             requiredMessage="Ime korisnika je obavezan podatak!"-->
-
-                        <p:outputLabel for="prezimeInput" value="Prezime   :   "/>
-                        <p:inputText id="prezimeInput"
-                                     value="#{pregledKorisnikaController.korisnikDto.prezime}"
-                                     maxlength="50" size="50"
-                                     required="false"
-                                     requiredMessage="Prezime korisnika je obavezan podatak!"/>
-
-                        <p:outputLabel for="oibInput" value="OIB   :   "/>
-                        <p:inputMask id="oibInput"
-                                     value="#{pregledKorisnikaController.korisnikDto.oib}"
-                                     maxlength="11"
-                                     required="false"
-                                     requiredMessage="OIB korisnika je obavezan podatak!"
-                                     mask="99999999999" validateMask="true"/>
-
-                        <p:outputLabel for="emailInput" value="Email   :   "/>
-                        <p:inputText id="emailInput"
-                                     value="#{pregledKorisnikaController.korisnikDto.email}"
-                                     maxlength="50" size="50"
-                                     required="false"
-                                     requiredMessage="Email korisnika je obavezan podatak!"/>
-
-                        <p:outputLabel for="tipKorsnikaInput" value="Uloga:   "/>
-                        <p:selectOneMenu id="tipKorsnikaInput"
-                                         value="#{pregledKorisnikaController.korisnikDto.tipKorisnika}"
-                                         style="width:250px" required="false"
-                                         requiredMessage="Uloga korisnika je obavezan podatak!">
-                            <f:selectItems value="#{pregledKorisnikaController.tipKorisnikaSelectItems}"/>
-                        </p:selectOneMenu>
-
-
-                        <p:commandButton value="Novi" actionListener="#{pregledKorisnikaController.resetDto}"
-                                         id="novizapis"
-                                         style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
-                                         update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>
-                        <p:commandButton value="Spremi" actionListener="#{pregledKorisnikaController.save}" id="spremi"
-                                         style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                         update="panel_unos, filterAdvanced, messages" icon="pi pi-save"/>
-
-                    </h:panelGrid>
-                </p:panel>
-
-                <p:panel id="panel_filter1" header="Pretraga korisnika aplikacije" style="margin-top:5px; color: #dfefff"
-                         toggleable="false"
-                         toggleSpeed="500" closeSpeed="500" toggleableHeader="false" collapsed="false" widgetVar="widgetFilter">
+                         toggleSpeed="500" closeSpeed="500" toggleableHeader="false" collapsed="false"
+                         widgetVar="widgetFilter">
 
                     <h:panelGrid columns="2" id="inputFormPanelGrid">
 
@@ -182,11 +184,13 @@
                         <!--                        <p:commandButton value="Novi" onclick="PF('dlg3').show();"-->
 
 
-                        <p:commandButton value="Poništi filter" actionListener="#{pregledKorisnikaController.resetFilterDto}"
+                        <p:commandButton value="Poništi filter"
+                                         actionListener="#{pregledKorisnikaController.resetFilterDto}"
                                          id="filterreset" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
                                          ajax="true"
                                          update="panel_filter2 panel_filter1" icon="pi pi-replay"/>
-                        <p:commandButton value="Pretraži" actionListener="#{pregledKorisnikaController.getFilterListKorisnik}"
+                        <p:commandButton value="Pretraži"
+                                         actionListener="#{pregledKorisnikaController.getFilterListKorisnik}"
                                          id="filter" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
                                          ajax="true" update="filterAdvanced, messages"
                                          icon="pi pi-search"/>
@@ -197,7 +201,6 @@
                 </p:panel>
 
 
-
             </h:panelGrid>
         </h:panelGrid>
 
@@ -205,7 +208,6 @@
         <p:panel id="panel_filter2" header="Rezultati pretrage" style="margin-top:5px; color: #dfefff"
                  toggleable="true"
                  toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
-
 
 
             <h:panelGrid columns="2">
@@ -222,7 +224,7 @@
                              allowUnsorting="true" sortMode="single"
                              emptyMessage="Ne postoji niti jedan korisnik">
                     <p:ajax event="rowSelect" listener="#{pregledKorisnikaController.onTableRowSelect}"
-                            update="mainForm:panel_unos"/>
+                            update="mainForm:panel_filter2"/>
 
                     <p:column sortBy="#{korisnikDogadajDto.korisnickoIme}" headerText="Korisničko ime">
                         <h:outputText value="#{korisnikDogadajDto.korisnickoIme}"/>
@@ -247,9 +249,9 @@
         </p:panel>
 
 
-        <p:dialog global="true" id="test" widgetVar="includedDialog" header="Moji podaci"  showEffect="explode" >
+        <p:dialog global="true" id="test" widgetVar="includedDialog" header="Moji podaci" showEffect="explode">
 
-            <ui:include src="/secured/user/korisnikInfo.xhtml" />
+            <ui:include src="/secured/user/korisnikInfo.xhtml"/>
 
         </p:dialog>
 
@@ -257,7 +259,7 @@
 </h:body>
 
 <script type="application/javascript">
-    function openAndFillDialog(){
+    function openAndFillDialog() {
         fillDialogData();
         PF('includedDialog').show();
     }
@@ -270,7 +272,7 @@
         callRemoteMethod();
     }
 
-    function openAndFillDialogNew(){
+    function openAndFillDialogNew() {
         fillDialogDataPromise().then(function () {
             openDialog();
         });
@@ -282,7 +284,6 @@
             resolve();
         })
     }
-
 
 
 </script>
